--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contactos:</h2>
 							<dl class="alt">
 								<dt>Email</dt>
 								<dd>sergio.florez01@correo.usa.edu.co</dd>
