--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="generic.html" class="button">Análisis</a></li>
 									</ul>
 								</footer>
 							</section>
