--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Stellar by HTML5 UP</title>
+		<title>Analisis-sidekit</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,19 +21,24 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Teachable Machine Pose Model</h1>
-						<p>Reconocimiento De Poses</p>
+						<h1>Reconocimiento de Dígitos Escritos a Mano</h1>
+						<p>Análisis red neuronal</p>
 					</header>
 
 				<!-- Main -->
 					<div id="main">
-						<button type="button" onclick="init()">Start</button>
 						<div><canvas id="canvas"></canvas></div>
-						<div id="webcam-container"></div>
-						<div id="label-container"></div>
 						<!-- Content -->
 							<section id="content" class="main">
-								<h2>Magna feugiat lorem</h2>
+								<h2>Librerias Usadas</h2>
+								<h3>matplotlib</h3>
+								<h4>pyplot</h4>
+								<h3>sklearn</h3>
+								<h4>dataset</h4>
+								<h4>svm</h4>
+								<h4>metrics</h4>
+								<h4>train_test_split</h4>
+								
 								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
 								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
 								<h2>Tempus veroeros</h2>
