--- a/generic.html
+++ b/generic.html
@@ -27,17 +27,21 @@
 
 				<!-- Main -->
 					<div id="main">
-						<div><canvas id="canvas"></canvas></div>
 						<!-- Content -->
 							<section id="content" class="main">
-								<h2>Librerias Usadas</h2>
-								<h3>matplotlib</h3>
+								<h1>Librerias Usadas</h1>
+								<h2><b>matplotlib</b></h2>
 								<h4>pyplot</h4>
-								<h3>sklearn</h3>
+								<p>Librería de Python especializada en la creación de gráficos en bidimensiones. Permite crear los tipos de gráficos más comunes.</p>
+								<h2><b>sklearn</b></h2>
 								<h4>dataset</h4>
+								<p></p>
 								<h4>svm</h4>
+								<p></p>
 								<h4>metrics</h4>
+								<p></p>
 								<h4>train_test_split</h4>
+								<p></p>
 								
 								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
 								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
