--- a/reconocimiento_sonidos.html
+++ b/reconocimiento_sonidos.html
@@ -35,9 +35,9 @@
                                 <div style="font-size: 30px;" id="label-container"></div>
                                 <button style="width: 50px; height: 50px;" type="button" onclick="init()" id="button1">Start</button>
                             </div>
-								<h2>Magna feugiat lorem</h2>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
+								<h2>Resumen Del Modelo</h2>
+								<p>En el modelo (2) se realiza un reconocimiento de sonidos. El equipo de trabajo seleccionó las siguientes categorías para el reconocimiento de audio [Gato - Perro - Pato]. Se realizó el entrenamiento de el modelo con aproximadamente 120 muestras de 8 segundos de cada categoría diferente, esto con el fin de tener una variación amplia de cada categoría para que el modelo pueda reconocer perfectamente el sonido y catalogarlo en la categoría respectiva con un porcentaje (%).</p>
+								<p>Un uso aplicable de este modelo en la vida cotidiana es un dispositivo que capture audio que pueda ser utilizado en zonas silvestre o rurales, esto con el fin de determinar si hay algún animal y reconocer el tipo de animal en el área de captura de audio.</p>
 							</section>
 
 					</div>
