--- a/reconocimiento_imagenes.html
+++ b/reconocimiento_imagenes.html
@@ -32,9 +32,9 @@
                                 <div style="font-size: 30px;" id="label-container"></div>
                                 <button style="width: 50px; height: 50px;" type="button" onclick="init()">Start</button>
                             </div>
-								<h2>Magna feugiat lorem</h2>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
+								<h2>Resumen Del Modelo</h2>
+								<p>En el modelo (1) se realiza un reconocimiento de imágenes. Se obteniene una precisión en el reconocimiento de las siguientes categorías seleccionadas por el equipo de trabajo [Cara - Celular - Mano] Gracias a él entrenamiento y reconocimiento de las categorías, se obtiene una valoración y detección de patrones que nos permite evidenciar mediante un porcentaje (%) cual es la categoría que se está evidenciando en cámara.</p>
+								<p>Un uso aplicable de este modelo en la vida cotidiana es una cámara inteligente que permite aceptar la entrada a lugares que dependan de un ingreso con tapabocas y sin teléfonos móviles a la mano.</p>
 							</section>
 
 					</div>
