--- a/reconocimiento_poses.html
+++ b/reconocimiento_poses.html
@@ -34,9 +34,9 @@
                                 <div id="label-container"></div>
                                 <button style="width: 50px; height: 50px;" type="button" onclick="init()">Start</button>
                             </div>
-								<h2>Magna feugiat lorem</h2>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
+								<h2>Resumen Del Modelo</h2>
+								<p>En el modelo (3) se realiza un reconocimiento de poses de un humano teniendo en cuenta el movimiento del esqueleto básico del cuerpo y distinguir distintos movimientos.  El equipo de trabajo decidió entrar en el ámbito de el estiramiento del cuerpo, por lo que el modelo realiza un reconocimiento de la postura o pose del cuerpo para así tener un claro conocimiento de cual es la zona o el músculo en el cual se está efectuando el estiramiento. Las categorías seleccionadas son [Escapula - Hombro - Cuádriceps]. Mediante un porcentaje (%) se sabe cuál es la zona donde se esta efectuando una mayor cantidad de trabajo.</p>
+								<p>Un uso aplicable de este modelo es el mismo que utilizamos para realizarlo, ser utilizado en una ambiente fisioterapeutico para darle a los usuarios un conocimiento de cual es la zona que se está trabajando con los ejercicios o poses que se haga.</p>
 							</section>
 
 					</div>
