--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<section style="position: relative; left: 350px;">
 							<h2>Contactos:</h2>
 							<dl class="alt">
 								<dt>Email</dt>
