--- a/generic.html
+++ b/generic.html
@@ -13,7 +13,6 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-		<div>Teachable Machine Pose Model</div>
 
 
 		<!-- Wrapper -->
@@ -53,11 +52,12 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<h2>CoLab</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+						<section style="position: relative; left: 350px;">
+							<h2>Explicación Del Modelo En Colab</h2>
+							<a href="https://colab.research.google.com/drive/1gY05a_Ufg-nmdq56ZM4q71nvAjrN9uWh?usp=sharing"><h2>Colab</h2></a>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
+								<h2>Volver Al Inicio</h2>
+								<li><a href="index.html" class="button">Inicio</a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
