--- a/generic.html
+++ b/generic.html
@@ -53,10 +53,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section style="position: relative; left: 350px;">
-							<h2>Explicación Del Modelo En Colab</h2>
+							<h2>Explicación Del Modelo En Colab:</h2>
 							<a href="https://colab.research.google.com/drive/1gY05a_Ufg-nmdq56ZM4q71nvAjrN9uWh?usp=sharing"><h2>Colab</h2></a>
 							<ul class="actions">
 								<h2>Volver Al Inicio</h2>
+								<br>
 								<li><a href="index.html" class="button">Inicio</a></li>
 							</ul>
 						</section>
