--- a/generic.html
+++ b/generic.html
@@ -54,10 +54,9 @@
 					<footer id="footer">
 						<section style="position: relative; left: 350px;">
 							<h2>Explicación Del Modelo En Colab:</h2>
-							<img src = "https://colab.research.google.com/img/colab_favicon_256px.png" width="150px" height = "150px">
-							<a href="https://colab.research.google.com/drive/1gY05a_Ufg-nmdq56ZM4q71nvAjrN9uWh?usp=sharing"><h2>Colab</h2></a>
-							<h2>Volver Al Inicio</h2>
-							<ul class="actions">
+							<a href="https://colab.research.google.com/drive/1gY05a_Ufg-nmdq56ZM4q71nvAjrN9uWh?usp=sharing"><img src = "https://colab.research.google.com/img/colab_favicon_256px.png" width="100px" height = "100px" style="position: relative; left: 50px;"></a>
+							<h2 style="position: relative; left: 50px;">Volver Al Inicio</h2>
+							<ul class="actions" style="position: relative; left: 50px;>
 								<li><a href="index.html" class="button">Inicio</a></li>
 							</ul>
 						</section>
