--- a/generic.html
+++ b/generic.html
@@ -54,11 +54,13 @@
 					<footer id="footer">
 						<section style="position: relative; left: 350px;">
 							<h2>Explicación Del Modelo En Colab:</h2>
-							<a href="https://colab.research.google.com/drive/1gY05a_Ufg-nmdq56ZM4q71nvAjrN9uWh?usp=sharing"><img src = "https://colab.research.google.com/img/colab_favicon_256px.png" width="100px" height = "100px" style="position: relative; left: 50px;"></a>
-							<h2 style="position: relative; left: 50px;">Volver Al Inicio</h2>
-							<ul class="actions" style="position: relative; left: 50px;>
+							<a href="https://colab.research.google.com/drive/1gY05a_Ufg-nmdq56ZM4q71nvAjrN9uWh?usp=sharing"><img src = "https://colab.research.google.com/img/colab_favicon_256px.png" width="100px" height = "100px" style="position: relative; left: 100px;"></a>
+							<div style="position: relative; left: 100px;">
+							<h2>Volver Al Inicio</h2>
+							<ul class="actions">
 								<li><a href="index.html" class="button">Inicio</a></li>
 							</ul>
+							</div>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
