--- a/generic.html
+++ b/generic.html
@@ -34,7 +34,7 @@
 								<p>Librería de Python especializada en la creación de gráficos en bidimensiones. Permite crear los tipos de gráficos más comunes.</p>
 								<h2><b>sklearn</b></h2>
 								<h4>dataset</h4>
-								<p></p>
+								<p>Genera el conjunto de datos que se utilizara en el modelo, para este caso al rededor de 1700 muestras de imágenes con dígitos escritos a mano en un tamaño de (8x8) pixeles</p>
 								<h4>svm</h4>
 								<p></p>
 								<h4>metrics</h4>
@@ -52,7 +52,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section style="position: relative; left: 350px;">
+						<section style="position: relative; left: 50px;">
 							<h2>Explicación Del Modelo En Colab:</h2>
 							<a href="https://colab.research.google.com/drive/1gY05a_Ufg-nmdq56ZM4q71nvAjrN9uWh?usp=sharing"><img src = "https://colab.research.google.com/img/colab_favicon_256px.png" width="100px" height = "100px" style="position: relative; left: 100px;"></a>
 							<div style="position: relative; left: 100px;">
