--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<dt>Email</dt>
 								<dd>sergio.florez01@correo.usa.edu.co</dd>
 								<dd>camilo.millan01@correo.usa.edu.co</dd>
-								<dd>julian.beltra02@correo.usa.edu.co</dd>
+								<dd>julian.beltran02@correo.usa.edu.co</dd>
 								<dd>andres.garcia00@correo.usa.edu.co</dd>
 								<dd>daniel.mora01@correo.usa.edu.co</dd>
 							</dl>
