--- a/generic.html
+++ b/generic.html
@@ -53,7 +53,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section style="position: relative; left: 5px;">
+						<section style="position: relative;">
 							<h2>Explicación Del Modelo En Colab:</h2>
 							<a href="https://colab.research.google.com/drive/1gY05a_Ufg-nmdq56ZM4q71nvAjrN9uWh?usp=sharing"><img src = "https://colab.research.google.com/img/colab_favicon_256px.png" width="100px" height = "100px" style="position: relative; left: 100px;"></a>
 							<div style="position: relative; left: 820px; bottom:150px;">
