--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="spotlight">
 							<div class="content">
 								<header class="major">
-									<h2 style="color: black;">Introducción Al Proyecto</h2>
+									<h2 style="color: black;"><b>INTRODUCCIÓN AL PROYECTO</b></h2>
 								</header>
 								<p style="font-size: 22px ;">Aqui podras encontrar un proyecto basado en Machine Learning, donde usamos 3 modelos para identificar diferentes cosas, como el reconocimiento de objetos, poses e incluso sonidos, todo esto basandonos en el aprendizaje de los modelos, los cuales al ser entrenados reducen su margen de error al minimo, ademas realizaremos una analisis del funcionamiento de una red neuronal.</p>
 								<ul class="actions">
@@ -121,7 +121,7 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Analisis: Red Neuronal</h2>
+									<h2><b>ANÁLISIS RED NEURONAL</b></h2>
 									<p>En esta sección se realizara un analisis especificado de como funciona una red neuronal a partir de un FrameWork de <a href="https://scikit-learn.org/stable/auto_examples/index.html">Scikit Learn</a></p>
 								</header>
 								<footer class="major">
