--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="spotlight">
 							<div class="content">
 								<header class="major">
-									<h2 style="color: black;"><b>INTRODUCCIÓN AL PROYECTO</b></h2>
+									<h2 ><b>INTRODUCCIÓN AL PROYECTO</b></h2>
 								</header>
 								<p style="font-size: 22px ;">Aqui podras encontrar un proyecto basado en Machine Learning, donde usamos 3 modelos para identificar diferentes cosas, como el reconocimiento de objetos, poses e incluso sonidos, todo esto basandonos en el aprendizaje de los modelos, los cuales al ser entrenados reducen su margen de error al minimo, ademas realizaremos una analisis del funcionamiento de una red neuronal.</p>
 								<ul class="actions">
