--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2 style="font-weight: bold ;">MODELOS DE RECONOCIMIENTO</h2>
+									<h2 style="font-weight: bold ;">MODELOS DE CLASIFICACIÓN</h2>
 								</header>
 								<ul class="features">
 									<li>
