--- a/generic.html
+++ b/generic.html
@@ -28,22 +28,36 @@
 					<div id="main">
 						<!-- Content -->
 							<section id="content" class="main">
-								<h1>Librerias Usadas</h1>
-								<h2><b>matplotlib</b></h2>
-								<h4>pyplot</h4>
-								<p>Librería de Python especializada en la creación de gráficos en bidimensiones. Permite crear los tipos de gráficos más comunes.</p>
-								<h2><b>sklearn</b></h2>
-								<h4>dataset</h4>
-								<p>Genera el conjunto de datos que se utilizara en el modelo, para este caso al rededor de 1700 muestras de imágenes con dígitos escritos a mano en un tamaño de (8x8) pixeles</p>
-								<h4>svm</h4>
-								<p>Support vector machine, libreria que contiene el conjunto de algoritmos similares a la regrecion linial pero con el objetivo de clacificar los 
-								datos.</p>
-								<h4>metrics</h4>
-								<p>Nos permite ver la informacion referente a las metricas de rendimiento del modelo, permitiendo evaluar aspectos como la precision.</p>
-								<h4>train_test_split</h4>
-								<p>Libreria que nos premite separar los datos que van a entrar a la red neuronal entre datos de prueba y de entrenamiento.</p>
-								
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+								<h1><b>Librerias Usadas</b></h1>
+									<h2><b>matplotlib</b></h2>
+										<h4>pyplot</h4>
+											<p>Librería de Python especializada en la creación de gráficos en bidimensiones. Permite crear los tipos de gráficos más comunes.</p>
+									<h2><b>sklearn</b></h2>
+										<h4>dataset</h4>
+											<p>Genera el conjunto de datos que se utilizara en el modelo, para este caso 1797 muestras de imágenes con dígitos escritos a mano en un tamaño de (8x8) pixeles</p>
+										<h4>svm</h4>
+											<p>Support vector machine, libreria que contiene el conjunto de algoritmos similares a la regrecion linial pero con el objetivo de clacificar los 
+											datos.</p>
+										<h4>metrics</h4>
+											<p>Nos permite ver la informacion referente a las metricas de rendimiento del modelo, permitiendo evaluar aspectos como la precision.</p>
+										<h4>train_test_split</h4>
+											<p>Libreria que nos premite separar los datos que van a entrar a la red neuronal entre datos de prueba y de entrenamiento.</p>
+								<h1><b>Datos utilizados</b></h1>
+										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+									<h2><b>Transformación</b></h2>
+										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+									<h2><b>División</b></h2>
+										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+								<h1><b>Funcionamiento de la red neuronal</b></h1>
+										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+									<h2><b>Tipo de red</b></h2>
+										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+								<h1><b>Funcionamiento Interno</b></h1>
+										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+									<h2><b>Kernel</b></h2>
+										<h4><b>Funcion de base radial Gaussiana</b></h4>
+											<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+
 								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
 								<h2>Tempus veroeros</h2>
 								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
