--- a/generic.html
+++ b/generic.html
@@ -44,16 +44,21 @@
 											<p>Libreria que nos premite separar los datos que van a entrar a la red neuronal entre datos de prueba y de entrenamiento.</p>
 								<h1><b>Datos utilizados</b></h1>
 										<p>Partimos de imagenes de 8x8 pixeles, las cuales guarna los valos de la escala de grises de los pixeles en un arreglo de 8x8 correspondientes a cada muestra.</p>
-										<img src = "images/imagenes analisis/digit_dataset.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
+										<a><img src = "images/imagenes analisis/digit_dataset.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
 									<h2><b>Transformación</b></h2>
 										<p>Posterior mente transformamos los datos para que puedan ser procesados por la red neuronal. Pirmero comvertimos el arreglo de 8x8 a una lista de 64 pixeles. Despues le damos forma al conjunto de datos en un arreglo que sea (n_imagen,n_pixel). </p>
 									<h2><b>División</b></h2>
 										<p>Para que la red funcione nesecita ser entrenada y probada, por ello el conjunto de datos en dos uno de pruebas y otro de entenamiento. Por ello dividimos los datos en 50% para ambos y de la forma (X_train, y_train) y (X_test, y_test). </p>
-										<img src = "https://thumbs.dreamstime.com/b/el-por-ciento-gr%C3%A1fico-de-sectores-de-gris-azul-y-del-blanco-infographics-del-vector-del-porcentaje-ejemplo-del-negocio-del-86867736.jpg" width="200px" height = "200px" style="position: relative; left: 10px;"></a>
+										<a><img src = "https://thumbs.dreamstime.com/b/el-por-ciento-gr%C3%A1fico-de-sectores-de-gris-azul-y-del-blanco-infographics-del-vector-del-porcentaje-ejemplo-del-negocio-del-86867736.jpg" width="200px" height = "200px" style="position: relative; left: 10px;"></a>
 								<h1><b>Funcionamiento de la red neuronal</b></h1>
 										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+										<a><img src = "images/imagenes analisis/red.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
+										<p></p>
+							
 									<h2><b>Tipo de red</b></h2>
+										<a><img src = "https://img.microsiervos.com/images2016/Neural-Networks-Chart.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
 										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+										<a><img src = "images/imagenes analisis/plano.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
 								<h1><b>Funcionamiento Interno</b></h1>
 										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
 									<h2><b>Kernel</b></h2>
