--- a/generic.html
+++ b/generic.html
@@ -36,14 +36,14 @@
 										<h4>dataset</h4>
 											<p>Genera el conjunto de datos que se utilizara en el modelo, para este caso 1797 muestras de imágenes con dígitos escritos a mano en un tamaño de (8x8) pixeles</p>
 										<h4>svm</h4>
-											<p>Support vector machine, libreria que contiene el conjunto de algoritmos similares a la regresión lineal pero con el objetivo de clacificar los 
+											<p>Support vector machine, libreria que contiene el conjunto de algoritmos similares a la regrecion linial pero con el objetivo de clacificar los 
 											datos.</p>
 										<h4>metrics</h4>
 											<p>Nos permite ver la informacion referente a las metricas de rendimiento del modelo, permitiendo evaluar aspectos como la precision.</p>
 										<h4>train_test_split</h4>
-											<p>Librería que nos premite separar los datos que van a entrar a la red neuronal entre datos de prueba y de entrenamiento.</p>
+											<p>Libreria que nos premite separar los datos que van a entrar a la red neuronal entre datos de prueba y de entrenamiento.</p>
 								<h1><b>Datos utilizados</b></h1>
-										<p>Partimos de imágenes de 8x8 pixeles, las cuales guarna los valos de la escala de grises de los pixeles en un arreglo de 8x8 correspondientes a cada muestra.</p>
+										<p>Partimos de imagenes de 8x8 pixeles, las cuales guarna los valos de la escala de grises de los pixeles en un arreglo de 8x8 correspondientes a cada muestra.</p>
 										<a><img src = "images/imagenes analisis/digit_dataset.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
 									<h2><b>Transformación</b></h2>
 										<p>Posterior mente transformamos los datos para que puedan ser procesados por la red neuronal. Pirmero comvertimos el arreglo de 8x8 a una lista de 64 pixeles. Despues le damos forma al conjunto de datos en un arreglo que sea (n_imagen,n_pixel). </p>
@@ -54,20 +54,28 @@
 										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
 										<a><img src = "images/imagenes analisis/red.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
 										<p></p>
-							
+										<a><img src = "images/imagenes analisis/plano.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
+										<p></p>
+										<a><img src = "images/imagenes analisis/plano_3d.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
+										<p></p>
+										<a><img src = "images/imagenes analisis/tabla_comparaciones.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
 									<h2><b>Tipo de red</b></h2>
-										<a><img src = "https://img.microsiervos.com/images2016/Neural-Networks-Chart.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
+										<a><img src = "https://img.microsiervos.com/images2016/Neural-Networks-Chart.png" width="400px" height = "300px" style="position: relative; left: 10px;"></a>
 										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-										<a><img src = "images/imagenes analisis/plano.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
 								<h1><b>Funcionamiento Interno</b></h1>
-										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+										<p>faucibus.</p>
+										<a><img src = "images/imagenes analisis/dificil_clacificacion.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
+										<p>faucibus.</p>
+										<a><img src = "images/imagenes analisis/clacifier.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
+										
 									<h2><b>Kernel</b></h2>
 										<h4><b>Funcion de base radial Gaussiana</b></h4>
 											<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
 
 								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
-								<h2>Tempus veroeros</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+								<h2><b>Metricas de la red</b></h2>
+								<p>Cep Tempus adipiscing arcu.</p><a>
+								<img src = "images/imagenes analisis/confucionpng" width="250px" height = "250px" style="position: relative; left: 10px;"></a>
 							</section>
 
 					</div>
