--- a/reconocimiento_imagenes.html
+++ b/reconocimiento_imagenes.html
@@ -33,7 +33,7 @@
                                 <button style="width: 50px; height: 50px;" type="button" onclick="init()">Start</button>
                             </div>
 								<h2>Resumen Del Modelo</h2>
-								<p>En el modelo (1) se realiza un reconocimiento de imágenes. Se obteniene una precisión en el reconocimiento de las siguientes categorías seleccionadas por el equipo de trabajo [Cara - Celular - Mano] Gracias a él entrenamiento y reconocimiento de las categorías, se obtiene una valoración y detección de patrones que nos permite evidenciar mediante un porcentaje (%) cual es la categoría que se está evidenciando en cámara.</p>
+								<p>En el modelo (1) se realiza un reconocimiento de imágenes. Se obtiene una precisión en el reconocimiento de las siguientes categorías seleccionadas por el equipo de trabajo [Cara - Celular - Mano] Gracias a él entrenamiento y reconocimiento de las categorías, se obtiene una valoración y detección de patrones que nos permite evidenciar mediante un porcentaje (%) cual es la categoría que se está evidenciando en cámara.</p>
 								<p>Un uso aplicable de este modelo en la vida cotidiana es una cámara inteligente que permite aceptar la entrada a lugares que dependan de un ingreso con tapabocas y sin teléfonos móviles a la mano.</p>
 							</section>
 
