--- a/reconocimiento_sonidos.html
+++ b/reconocimiento_sonidos.html
@@ -36,7 +36,7 @@
                                 <button style="width: 50px; height: 50px;" type="button" onclick="init()" id="button1">Start</button>
                             </div>
 								<h2>Resumen Del Modelo</h2>
-								<p>En el modelo (2) se realiza un reconocimiento de sonidos. El equipo de trabajo seleccionó las siguientes categorías para el reconocimiento de audio [Gato - Perro - Pato]. Se realizó el entrenamiento de el modelo con aproximadamente 120 muestras de 8 segundos de cada categoría diferente, esto con el fin de tener una variación amplia de cada categoría para que el modelo pueda reconocer perfectamente el sonido y catalogarlo en la categoría respectiva con un porcentaje (%).</p>
+								<p>En el modelo (2) se realiza un reconocimiento de sonidos. El equipo de trabajo seleccionó las siguientes categorías para el reconocimiento de audio [Gato - Perro - Pato]. Se realizó el entrenamiento del modelo con aproximadamente 120 muestras de 8 segundos de cada categoría diferente, esto con el fin de tener una variación amplia de cada categoría para que el modelo pueda reconocer perfectamente el sonido y catalogarlo en la categoría respectiva con un porcentaje (%).</p>
 								<p>Un uso aplicable de este modelo en la vida cotidiana es un dispositivo que capture audio que pueda ser utilizado en zonas silvestre o rurales, esto con el fin de determinar si hay algún animal y reconocer el tipo de animal en el área de captura de audio.</p>
 							</section>
 
