--- a/reconocimiento_poses.html
+++ b/reconocimiento_poses.html
@@ -35,8 +35,8 @@
                                 <button style="width: 50px; height: 50px;" type="button" onclick="init()">Start</button>
                             </div>
 								<h2>Resumen Del Modelo</h2>
-								<p>En el modelo (3) se realiza un reconocimiento de poses de un humano teniendo en cuenta el movimiento del esqueleto básico del cuerpo y distinguir distintos movimientos.  El equipo de trabajo decidió entrar en el ámbito de el estiramiento del cuerpo, por lo que el modelo realiza un reconocimiento de la postura o pose del cuerpo para así tener un claro conocimiento de cual es la zona o el músculo en el cual se está efectuando el estiramiento. Las categorías seleccionadas son [Escapula - Hombro - Cuádriceps]. Mediante un porcentaje (%) se sabe cuál es la zona donde se esta efectuando una mayor cantidad de trabajo.</p>
-								<p>Un uso aplicable de este modelo es el mismo que utilizamos para realizarlo, ser utilizado en una ambiente fisioterapeutico para darle a los usuarios un conocimiento de cual es la zona que se está trabajando con los ejercicios o poses que se haga.</p>
+								<p>En el modelo (3) se realiza un reconocimiento de poses de un humano teniendo en cuenta el movimiento del esqueleto básico del cuerpo y distinguir distintos movimientos. El equipo de trabajo decidió entrar en el ámbito del estiramiento del cuerpo, por lo que el modelo realiza un reconocimiento de la postura o pose del cuerpo para así tener un claro conocimiento de cuál es la zona o el músculo en el cual se está efectuando el estiramiento. Las categorías seleccionadas son [Escapula - Hombro - Cuádriceps]. Mediante un porcentaje (%) se sabe cuál es la zona donde se está efectuando una mayor cantidad de trabajo.</p>
+								<p>Un uso aplicable de este modelo es el mismo que utilizamos para realizarlo, ser utilizado en un ambiente fisioterapéutico para darle a los usuarios un conocimiento de cuál es la zona que se está trabajando con los ejercicios o poses que se haga.</p>
 							</section>
 
 					</div>
