--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="https://cdn.discordapp.com/attachments/958538377236447263/973946325186011277/super-intelligence.png" alt="" style="height: 100px; width: 100px;" /></span>
 						<h1>PROYECTO I.A</h1>
-						<p>Proyecto para el programa de ciencias de la computacion e inteligencia artificial<br />
+						<p>Proyecto para el programa de ciencias de la computación e inteligencia artificial<br />
 						construido por los estudiantes de primer semestre.</p>
 					</header>
 
@@ -31,7 +31,7 @@
 							<li><a href="#intro" class="active">Introducción</a></li>
 							<li><a href="#second">Equipo</a></li>
 							<li><a href="#first">Modelos</a></li>
-							<li><a href="#cta">Analisis</a></li>
+							<li><a href="#cta">Análisis</a></li>
 						</ul>
 					</nav>
 
