--- a/generic.html
+++ b/generic.html
@@ -52,11 +52,11 @@
 								<h1><b>Funcionamiento de la red neuronal</b></h1>
 										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
 										<a><img src = "images/imagenes analisis/red.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
-										<p></p>
+										<p>a</p>
 										<a><img src = "images/imagenes analisis/plano.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
-										<p></p>
+										<p>a</p>
 										<a><img src = "images/imagenes analisis/plano_3d.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
-										<p></p>
+										<p>a</p>
 										<a><img src = "images/imagenes analisis/tabla_comparacion.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
 									<h2><b>Tipo de red</b></h2>
 										<a><img src = "https://img.microsiervos.com/images2016/Neural-Networks-Chart.png" width="400px" height = "300px" style="position: relative; left: 10px;"></a>
@@ -68,13 +68,20 @@
 										<a><img src = "images/imagenes analisis/clasifier.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
 										
 									<h2><b>Kernel</b></h2>
+											<p>a</p>
+											<img src = "images/imagenes analisis/sin_curbar.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
 										<h4><b>Funcion de base radial Gaussiana</b></h4>
 											<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-
+											<img src = "images/imagenes analisis/formula.png" width="400px"height = "200px" style="position: relative; left: 10px;"></a>
+											<img src = "images/imagenes analisis/curbada.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
+										<h4><b>Resultados</b></h4>
+										<p>a</p>
+										<img src = "images/imagenes analisis/prediccion.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
 								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
 								<h2><b>Metricas de la red</b></h2>
 								<p>Cep Tempus adipiscing arcu.</p><a>
 								<img src = "images/imagenes analisis/confucion.png" width="250px" height = "250px" style="position: relative; left: 10px;"></a>
+								<img src = "images/imagenes analisis/estadisticas.png" width="250px" height = "250px" style="position: relative; left: 10px;"></a>
 							</section>
 
 					</div>
