--- a/generic.html
+++ b/generic.html
@@ -50,13 +50,13 @@
 										<p>Para que la red funcione necesita ser entrenada y probada, por ello el conjunto de datos en dos uno de pruebas y otro de entrenamiento. Por ello dividimos los datos en 50% para ambos y de la forma (X_train, y_train) y (X_test, y_test).</p>
 										<a><img src = "https://thumbs.dreamstime.com/b/el-por-ciento-gr%C3%A1fico-de-sectores-de-gris-azul-y-del-blanco-infographics-del-vector-del-porcentaje-ejemplo-del-negocio-del-86867736.jpg" width="200px" height = "200px" style="position: relative; left: 10px;"></a>
 								<h1><b>Funcionamiento de la red neuronal</b></h1>
-										<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
+										<p>Por las caracteristicas de SVM (support vector machine) se crea una red donde los datos de entrada pasan por una neurona de base radia que la modifica y posteriormente esos datos se les asigna un peso, para tomarlos en cuenta en la sumatoria final. Que en el caso de SVC (support vector classification) segun el cesgo establecido lo clasificara de un modo u otro.</p>
 										<a><img src = "images/imagenes analisis/red.png" width="400px" height = "200px" style="position: relative; left: 10px;"></a>
-										<p>a</p>
+										<p>Esto se puede ver graficamente de la siguiente manera, los datos ingresados a el modelo que los requiere en forma de vector se organizan en un plano con dichas coordenadas, posteriormente se crea la funcion RBF de manera que divida los puntos del plano para clasificarlos. La funcion estasra a una distacia del punto más cercano de una cartegoria, la cual se denomina como margen y a los puntos mencionados, vectores de soporte </p>
 										<a><img src = "images/imagenes analisis/plano.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
-										<p>a</p>
+										<p>Los puntos tambien pueden ser manipulados y estar divididos por un hiperplano, dandonos una herramienta para categorizar grupos de datos mas complejos.</p>
 										<a><img src = "images/imagenes analisis/plano_3d.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
-										<p>a</p>
+										<p>La forma en que la red ajusta el plano es comparando las predicciones que hace, con los valores reales que introducimos. Ya que este es un modelo de aprendizaje supervisado, ajusta la clasificación que realiza según qué tan acorde esté con los resultados de los datos de entrenamiento.</p>
 										<a><img src = "images/imagenes analisis/tabla_comparacion.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
 									<h2><b>Tipo de red</b></h2>
 										<a><img src = "https://img.microsiervos.com/images2016/Neural-Networks-Chart.png" width="400px" height = "300px" style="position: relative; left: 10px;"></a>
